// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiselect /w design 1`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c4 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c4 > *,
.c4 input {
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border: 1px solid #D5D5D6;
}

.c1:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: none;
  width: 100%;
}

.c6 {
  width: 100%;
  overflow: hidden;
  color: #AAABAD;
}

.c2 .c3 {
  width: calc(100% - 32px );
}

<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="c0"
  role="combobox"
  tabindex="1"
>
  <label
    class="c1 c2"
    target=".Multiselectstyles__Current-sc-1tat4gv-1"
  >
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        />
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Multiselect /w design 2`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c4 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c4 > *,
.c4 input {
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border-bottom: 1px solid #D5D5D6;
  border-radius: 0;
  padding: 0;
}

.c1:hover {
  border-bottom-color: #2B2D33;
  box-shadow: inset 0px -1px 0px 0px #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: none;
  width: 100%;
}

.c6 {
  width: 100%;
  overflow: hidden;
  color: #AAABAD;
}

.c2 .c3 {
  width: calc(100% - 32px );
}

<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="c0"
  role="combobox"
  tabindex="1"
>
  <label
    class="c1 c2"
    target=".Multiselectstyles__Current-sc-1tat4gv-1"
  >
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        />
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Multiselect /w disabled 1`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c4 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
  color: rgba(43,45,51,0.24);
}

.c4 > *,
.c4 input {
  color: #2B2D33;
}

.c4 *,
.c4 input {
  color: rgba(43,45,51,0.24);
}

.c4 *::-webkit-input-placeholder,
.c4 input::-webkit-input-placeholder {
  color: rgba(43,45,51,0.24);
}

.c4 *::-moz-placeholder,
.c4 input::-moz-placeholder {
  color: rgba(43,45,51,0.24);
}

.c4 *:-ms-input-placeholder,
.c4 input:-ms-input-placeholder {
  color: rgba(43,45,51,0.24);
}

.c4 *::placeholder,
.c4 input::placeholder {
  color: rgba(43,45,51,0.24);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border: 1px solid #D5D5D6;
  pointer-events: none;
  border-color: #F4F4F4;
  background-color: #F4F4F4;
  color: rgba(43,45,51,0.24);
}

.c2:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: none;
  width: 100%;
}

.c6 {
  width: 100%;
  overflow: hidden;
  color: #AAABAD;
  color: rgba(43,45,51,0.24);
}

.c1 .c3 {
  width: calc(100% - 32px );
}

<Multiselect
  design="outline"
  disabled={true}
  maxListHeight={300}
  openWhenFocus={true}
  postfix={
    Object {
      "down": <SelectOpenDown
        color="currentColor"
        size="m"
      />,
      "up": <SelectHide
        color="currentColor"
        size="m"
      />,
    }
  }
  size="l"
  tabIndex={1}
>
  <Multiselectstyles__Box
    aria-autocomplete="list"
    aria-disabled={true}
    aria-invalid={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex={1}
  >
    <div
      aria-autocomplete="list"
      aria-disabled={true}
      aria-invalid={false}
      className="c0"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={1}
    >
      <Multiselectstyles__StyledInputWrapper
        active={false}
        design="outline"
        disabled={true}
        size="l"
        target={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": e {
              "baseHash": 288996390,
              "baseStyle": undefined,
              "componentId": "Multiselectstyles__Current-sc-1tat4gv-1",
              "isStatic": false,
              "rules": Array [
                "display:flex;width:100%;align-items:center;height:100%;display:flex;align-items:center;",
                [Function],
                " ",
                [Function],
              ],
              "staticRulesId": "",
            },
            "displayName": "Multiselectstyles__Current",
            "foldedComponentIds": Array [],
            "render": [Function],
            "shouldForwardProp": undefined,
            "styledComponentId": "Multiselectstyles__Current-sc-1tat4gv-1",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
      >
        <InputWrapper
          active={false}
          className="c1"
          design="outline"
          disabled={true}
          size="l"
          target={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": e {
                "baseHash": 288996390,
                "baseStyle": undefined,
                "componentId": "Multiselectstyles__Current-sc-1tat4gv-1",
                "isStatic": false,
                "rules": Array [
                  "display:flex;width:100%;align-items:center;height:100%;display:flex;align-items:center;",
                  [Function],
                  " ",
                  [Function],
                ],
                "staticRulesId": "",
              },
              "displayName": "Multiselectstyles__Current",
              "foldedComponentIds": Array [],
              "render": [Function],
              "shouldForwardProp": undefined,
              "styledComponentId": "Multiselectstyles__Current-sc-1tat4gv-1",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
        >
          <Inputstyles__Wrapper
            active={false}
            className="c1"
            design="outline"
            disabled={true}
            size="l"
            target={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": e {
                  "baseHash": 288996390,
                  "baseStyle": undefined,
                  "componentId": "Multiselectstyles__Current-sc-1tat4gv-1",
                  "isStatic": false,
                  "rules": Array [
                    "display:flex;width:100%;align-items:center;height:100%;display:flex;align-items:center;",
                    [Function],
                    " ",
                    [Function],
                  ],
                  "staticRulesId": "",
                },
                "displayName": "Multiselectstyles__Current",
                "foldedComponentIds": Array [],
                "render": [Function],
                "shouldForwardProp": undefined,
                "styledComponentId": "Multiselectstyles__Current-sc-1tat4gv-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
          >
            <label
              className="c2 c1"
              disabled={true}
              size="l"
              target={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": e {
                    "baseHash": 288996390,
                    "baseStyle": undefined,
                    "componentId": "Multiselectstyles__Current-sc-1tat4gv-1",
                    "isStatic": false,
                    "rules": Array [
                      "display:flex;width:100%;align-items:center;height:100%;display:flex;align-items:center;",
                      [Function],
                      " ",
                      [Function],
                    ],
                    "staticRulesId": "",
                  },
                  "displayName": "Multiselectstyles__Current",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "shouldForwardProp": undefined,
                  "styledComponentId": "Multiselectstyles__Current-sc-1tat4gv-1",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
            >
              <Inputstyles__Wrapped
                disabled={true}
              >
                <div
                  className="c3 c4"
                  disabled={true}
                >
                  <Multiselectstyles__Current
                    key=".1"
                    size="l"
                  >
                    <div
                      className="c5"
                      size="l"
                    >
                      <Multiselectstyles__Placeholder
                        disabled={true}
                      >
                        <div
                          className="c6"
                          disabled={true}
                        />
                      </Multiselectstyles__Placeholder>
                    </div>
                  </Multiselectstyles__Current>
                </div>
              </Inputstyles__Wrapped>
              <Inputstyles__Postfix
                active={false}
                size="l"
              >
                <div
                  className="c7"
                  size="l"
                >
                  <Multiselectstyles__Part
                    active={false}
                    key=".2"
                    onMouseDown={[Function]}
                    right={true}
                  >
                    <div
                      className="c8"
                      onMouseDown={[Function]}
                    >
                      <SelectOpenDown
                        color="currentColor"
                        size="m"
                      >
                        <svg
                          fill="currentColor"
                          height={20}
                          viewBox="0 0 24 24"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <defs />
                          <path
                            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
                          />
                        </svg>
                      </SelectOpenDown>
                    </div>
                  </Multiselectstyles__Part>
                </div>
              </Inputstyles__Postfix>
            </label>
          </Inputstyles__Wrapper>
        </InputWrapper>
      </Multiselectstyles__StyledInputWrapper>
    </div>
  </Multiselectstyles__Box>
</Multiselect>
`;

exports[`Multiselect /w invalid 1`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c4 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c4 > *,
.c4 input {
  color: #2B2D33;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border: 1px solid #D5D5D6;
  border-color: #EE505A;
}

.c2:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: none;
  width: 100%;
}

.c6 {
  width: 100%;
  overflow: hidden;
  color: #AAABAD;
}

.c1 .c3 {
  width: calc(100% - 32px );
}

<Multiselect
  design="outline"
  invalid={true}
  maxListHeight={300}
  openWhenFocus={true}
  postfix={
    Object {
      "down": <SelectOpenDown
        color="currentColor"
        size="m"
      />,
      "up": <SelectHide
        color="currentColor"
        size="m"
      />,
    }
  }
  size="l"
  tabIndex={1}
>
  <Multiselectstyles__Box
    aria-autocomplete="list"
    aria-disabled={false}
    aria-invalid={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex={1}
  >
    <div
      aria-autocomplete="list"
      aria-disabled={false}
      aria-invalid={true}
      className="c0"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={1}
    >
      <Multiselectstyles__StyledInputWrapper
        active={false}
        design="outline"
        invalid={true}
        size="l"
        target={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": e {
              "baseHash": 288996390,
              "baseStyle": undefined,
              "componentId": "Multiselectstyles__Current-sc-1tat4gv-1",
              "isStatic": false,
              "rules": Array [
                "display:flex;width:100%;align-items:center;height:100%;display:flex;align-items:center;",
                [Function],
                " ",
                [Function],
              ],
              "staticRulesId": "",
            },
            "displayName": "Multiselectstyles__Current",
            "foldedComponentIds": Array [],
            "render": [Function],
            "shouldForwardProp": undefined,
            "styledComponentId": "Multiselectstyles__Current-sc-1tat4gv-1",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
      >
        <InputWrapper
          active={false}
          className="c1"
          design="outline"
          invalid={true}
          size="l"
          target={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": e {
                "baseHash": 288996390,
                "baseStyle": undefined,
                "componentId": "Multiselectstyles__Current-sc-1tat4gv-1",
                "isStatic": false,
                "rules": Array [
                  "display:flex;width:100%;align-items:center;height:100%;display:flex;align-items:center;",
                  [Function],
                  " ",
                  [Function],
                ],
                "staticRulesId": "",
              },
              "displayName": "Multiselectstyles__Current",
              "foldedComponentIds": Array [],
              "render": [Function],
              "shouldForwardProp": undefined,
              "styledComponentId": "Multiselectstyles__Current-sc-1tat4gv-1",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
        >
          <Inputstyles__Wrapper
            active={false}
            className="c1"
            design="outline"
            invalid={true}
            size="l"
            target={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": e {
                  "baseHash": 288996390,
                  "baseStyle": undefined,
                  "componentId": "Multiselectstyles__Current-sc-1tat4gv-1",
                  "isStatic": false,
                  "rules": Array [
                    "display:flex;width:100%;align-items:center;height:100%;display:flex;align-items:center;",
                    [Function],
                    " ",
                    [Function],
                  ],
                  "staticRulesId": "",
                },
                "displayName": "Multiselectstyles__Current",
                "foldedComponentIds": Array [],
                "render": [Function],
                "shouldForwardProp": undefined,
                "styledComponentId": "Multiselectstyles__Current-sc-1tat4gv-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
          >
            <label
              className="c2 c1"
              size="l"
              target={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": e {
                    "baseHash": 288996390,
                    "baseStyle": undefined,
                    "componentId": "Multiselectstyles__Current-sc-1tat4gv-1",
                    "isStatic": false,
                    "rules": Array [
                      "display:flex;width:100%;align-items:center;height:100%;display:flex;align-items:center;",
                      [Function],
                      " ",
                      [Function],
                    ],
                    "staticRulesId": "",
                  },
                  "displayName": "Multiselectstyles__Current",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "shouldForwardProp": undefined,
                  "styledComponentId": "Multiselectstyles__Current-sc-1tat4gv-1",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
            >
              <Inputstyles__Wrapped>
                <div
                  className="c3 c4"
                >
                  <Multiselectstyles__Current
                    key=".1"
                    size="l"
                  >
                    <div
                      className="c5"
                      size="l"
                    >
                      <Multiselectstyles__Placeholder>
                        <div
                          className="c6"
                        />
                      </Multiselectstyles__Placeholder>
                    </div>
                  </Multiselectstyles__Current>
                </div>
              </Inputstyles__Wrapped>
              <Inputstyles__Postfix
                active={false}
                size="l"
              >
                <div
                  className="c7"
                  size="l"
                >
                  <Multiselectstyles__Part
                    active={false}
                    key=".2"
                    onMouseDown={[Function]}
                    right={true}
                  >
                    <div
                      className="c8"
                      onMouseDown={[Function]}
                    >
                      <SelectOpenDown
                        color="currentColor"
                        size="m"
                      >
                        <svg
                          fill="currentColor"
                          height={20}
                          viewBox="0 0 24 24"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <defs />
                          <path
                            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
                          />
                        </svg>
                      </SelectOpenDown>
                    </div>
                  </Multiselectstyles__Part>
                </div>
              </Inputstyles__Postfix>
            </label>
          </Inputstyles__Wrapper>
        </InputWrapper>
      </Multiselectstyles__StyledInputWrapper>
    </div>
  </Multiselectstyles__Box>
</Multiselect>
`;

exports[`Multiselect /w size 1`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 4px;
  font-size: 12px;
  margin-right: 0;
}

.c4 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c4 > *,
.c4 input {
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 24px;
  border-radius: 4px;
  padding-left: 8px;
  padding-right: 8px;
  border: 1px solid #D5D5D6;
}

.c1:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 12px;
  line-height: 18px;
  border-radius: 4px;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: none;
  width: 100%;
}

.c6 {
  width: 100%;
  overflow: hidden;
  color: #AAABAD;
}

.c2 .c3 {
  width: calc(100% - 20px );
}

<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="c0"
  role="combobox"
  tabindex="1"
>
  <label
    class="c1 c2"
    target=".Multiselectstyles__Current-sc-1tat4gv-1"
  >
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        />
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Multiselect /w size 2`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c4 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c4 > *,
.c4 input {
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 32px;
  border: 1px solid #D5D5D6;
}

.c1:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: none;
  width: 100%;
}

.c6 {
  width: 100%;
  overflow: hidden;
  color: #AAABAD;
}

.c9 .c3 {
  width: calc(100% - 20px );
}

.c2 .c3 {
  width: calc(100% - 24px );
}

<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="c0"
  role="combobox"
  tabindex="1"
>
  <label
    class="c1 c2"
    target=".Multiselectstyles__Current-sc-1tat4gv-1"
  >
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        />
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Multiselect /w size 3`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c4 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c4 > *,
.c4 input {
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 36px;
  border: 1px solid #D5D5D6;
}

.c1:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: none;
  width: 100%;
}

.c6 {
  width: 100%;
  overflow: hidden;
  color: #AAABAD;
}

.c9 .c3 {
  width: calc(100% - 20px );
}

.c2 .c3 {
  width: calc(100% - 24px );
}

<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="c0"
  role="combobox"
  tabindex="1"
>
  <label
    class="c1 c2"
    target=".Multiselectstyles__Current-sc-1tat4gv-1"
  >
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        />
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Multiselect /w size 4`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c4 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c4 > *,
.c4 input {
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border: 1px solid #D5D5D6;
}

.c1:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: none;
  width: 100%;
}

.c6 {
  width: 100%;
  overflow: hidden;
  color: #AAABAD;
}

.c9 .c3 {
  width: calc(100% - 20px );
}

.c10 .c3 {
  width: calc(100% - 24px );
}

.c2 .c3 {
  width: calc(100% - 32px );
}

<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="c0"
  role="combobox"
  tabindex="1"
>
  <label
    class="c1 c2"
    target=".Multiselectstyles__Current-sc-1tat4gv-1"
  >
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        />
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Multiselect /w size 5`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 12px;
  font-size: 16px;
  margin-right: 0;
}

.c4 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c4 > *,
.c4 input {
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 48px;
  border: 1px solid #D5D5D6;
}

.c1:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 26px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: none;
  width: 100%;
}

.c6 {
  width: 100%;
  overflow: hidden;
  color: #AAABAD;
}

.c9 .c3 {
  width: calc(100% - 20px );
}

.c10 .c3 {
  width: calc(100% - 24px );
}

.c2 .c3 {
  width: calc(100% - 32px );
}

<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="c0"
  role="combobox"
  tabindex="1"
>
  <label
    class="c1 c2"
    target=".Multiselectstyles__Current-sc-1tat4gv-1"
  >
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        />
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Multiselect /w size 6`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 12px;
  font-size: 16px;
  margin-right: 0;
}

.c4 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c4 > *,
.c4 input {
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 52px;
  border: 1px solid #D5D5D6;
}

.c1:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 26px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: none;
  width: 100%;
}

.c6 {
  width: 100%;
  overflow: hidden;
  color: #AAABAD;
}

.c9 .c3 {
  width: calc(100% - 20px );
}

.c10 .c3 {
  width: calc(100% - 24px );
}

.c2 .c3 {
  width: calc(100% - 32px );
}

<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="c0"
  role="combobox"
  tabindex="1"
>
  <label
    class="c1 c2"
    target=".Multiselectstyles__Current-sc-1tat4gv-1"
  >
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        />
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Multiselect w/ any props 1`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #AAABAD;
  margin: 0 8px;
  font-size: 14px;
  margin-right: 0;
}

.c4 {
  height: 100%;
  width: 100%;
  color: #2B2D33;
}

.c4 > *,
.c4 input {
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  background-color: #FFFFFF;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 8px;
  width: 100%;
  color: #2B2D33;
  padding-left: 12px;
  padding-right: 12px;
  height: 40px;
  border: 1px solid #D5D5D6;
}

.c1:hover {
  border-color: #2B2D33;
  box-shadow: inset 0px 0px 0px 1px #2B2D33;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  cursor: pointer;
  outline: none;
  width: 100%;
}

.c6 {
  width: 100%;
  overflow: hidden;
  color: #AAABAD;
}

.c2 .c3 {
  width: calc(100% - 32px );
}

<div
  aria-autocomplete="list"
  aria-disabled="false"
  aria-invalid="false"
  class="c0 className"
  id="id"
  role="combobox"
  tabindex="1"
  title="title"
>
  <label
    class="c1 c2"
    target=".Multiselectstyles__Current-sc-1tat4gv-1"
  >
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        />
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
